@@ -139,6 +139,7 @@
                 <div class="ib-hourglass"></div>
                 <div class="ib-close"></div>
                 <div class="ib-bar-graph"></div>
+                <div class="ib-expand"></div>
             </div>
         </div>
     </body>
