@@ -27,7 +27,6 @@
 @import "scss/arrows/arrow-right-full-line";
 @import "scss/arrows/arrow-up-full-line";
 @import "scss/arrows/arrow-down-full-line";
-
 @import "scss/arrows/arrow-up";
 @import "scss/arrows/arrow-down";
 @import "scss/arrows/arrow-left";
@@ -113,3 +112,4 @@
 @import "scss/other/hourglass";
 @import "scss/other/close";
 @import "scss/other/bar-graph";
+@import "scss/other/expand";
